--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,8 +9,8 @@
    
     <a href="About me.html">About me</a>
     <a href="What other are saying about me.html">What other are saying about me</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="Blog.html">Blog</a>
+    <a href="1917.html">Portfolio</a>
+    <a href="1918.html">Blog</a>
     <div>
         <h1>Portfolio:</h1>
         <h2>My portfolio:</h2>
