--- a/What other are saying about me.html
+++ b/What other are saying about me.html
@@ -7,10 +7,10 @@
 </head>
 <body>
    
-    <a href="About me.html">About me</a>
-    <a href="What other are saying about me.html">What others are saying about me</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="Blog.html">Blog</a>
+    <a href="1915.html">About me</a>
+    <a href="1916.html">What others are saying about me</a>
+    <a href="1917.html">Portfolio</a>
+    <a href="1918.html">Blog</a>
     <div>
         <h1>What others are saying about me:</h1>
         
@@ -39,13 +39,6 @@
 		   <th> He said that I am fabulous. </th>
 		   <th> NAH </th>
 		   <th> <a href="eduards.png"> Source</th>
-		   </tr>
-		   <tr>
-		   <th> Ralfs </th>
-		   <th> He said that I am a sigma </th>
-		   <th>  NEIN </th>
-		   <th> <a href="Ralfs sigma.png"> Source </th>
-		   </tr>
 		   
 		   </tr>
 		   </div>
