--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,7 @@
             
         <h2>When I was 8 years old I won  first place in "Latvian chempionship in clinch."</h2>
             <img src="2017.png">
-            <p>When I was 8 years old I won first place in "Latvian chempionship in clinch." This is by far my most proudest moment. I still remember my fights liek yesterday . This is also the first time I won a trophy.</p>
+            <p>When I was 8 years old I won first place in "Latvian chempionship in clinch." This is by far my most proudest moment. I still remember my fights like yesterday . This is also the first time I won a trophy.</p>
             
         <h2>I was playing for the football team METTA.  </h2>
             <img src="metta.png">
