--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,6 +12,9 @@
     <a href="1917.html">Portfolio</a>
     <a href="1918.html">Blog</a>
     <div>
+	    <style>
+		    style="text-align:center;"
+	    </style>
         <h1>Portfolio:</h1>
         <h2>My portfolio:</h2>
 		
