--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,7 +12,7 @@
     <a href="1917.html">Portfolio</a>
     <a href="1918.html">Blog</a>
     <div>
-	    <table></table>
+	    <table>
 
 		    
         <h1>Portfolio:</h1>
